fix sticky footer issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ h3 {
     margin-right: 5vw;
   }
   footer {
+    margin-top: 30px;
     border-top: 3px solid rgba(230, 230, 0, 1);
     min-height: 50px;
   }
